istio-control/istio-config/files/envoy_galley.yaml


admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 15000

static_resources:

  clusters:
  - name: in.9091
    http2_protocol_options: {}
    connect_timeout: 1.000s

    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 9091

    circuit_breakers:
      thresholds:
      - max_connections: 100000
        max_pending_requests: 100000
        max_requests: 100000
        max_retries: 3

  listeners:
  - name: "15019"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15019
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: HTTP2
          stat_prefix: "15010"
          http2_protocol_options:
            max_concurrent_streams: 1073741824

          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/stdout

          http_filters:
          - name: envoy.router

          route_config:
            name: "15019"

            virtual_hosts:
            - name: istio-galley

              domains:
              - '*'

              routes:
              - match:
                  prefix: /
                route:
                  cluster: in.9091
                  timeout: 0.000s
      tls_context:
        common_tls_context:
          alpn_protocols:
          - h2
          tls_certificates:
          - certificate_chain:
              filename: /etc/certs/cert-chain.pem
            private_key:
              filename: /etc/certs/key.pem
          validation_context:
            trusted_ca:
              filename: /etc/certs/root-cert.pem
        require_client_certificate: true
